--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
   "name": "babel-plugin-jsx-to-generichtml",
-  "version": "0.1.3",
+  "version": "0.1.5",
   "description": "An experimental babel plugin to convert JSX contained in React/ Preact classes's render function to Generic HTML. This HTML can be further transpiled into different Java or any other language template engine",
   "main": "lib/index.js",
   "devDependencies": {
     "babel-cli": "^6.3.15",
+    "babel-register": "^6.3.13",
+    "mocha": "^2.3.4"
+  },
+  "dependencies": {
     "babel-core": "^6.3.15",
     "babel-plugin-syntax-class-properties": "^6.3.13",
     "babel-plugin-syntax-jsx": "^6.3.13",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-register": "^6.3.13",
-    "mocha": "^2.3.4"
+    "babel-preset-es2015": "^6.3.13"
   },
   "scripts": {
     "build": "babel src --out-dir lib",
